--- a/index.html
+++ b/index.html
@@ -17,10 +17,32 @@
     </marquee>
   </div>
     <hr>  
-    <div class="k"> 
-    <img class="pic" src="https://i.im.ge/2025/01/19/HMdqRy.1000016724.webp" height="150px" width="150px"> 
-    <h2 class="name">deepak aggarwal</h2>
-</div>
+    <div class="card">
+      <div class="card-body">
+        <div class="card-img" img="left"> 
+        <img class="vaish2005" src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg">
+        <div class="card-h6">
+ Name:deepak aggarwal
+ <div class="card-h6">
+  Degree:BCA 
+  <div class="card-h6">
+    Certificate:HKCL(3 and 6 months)
+    <div class="card-h6">
+      University:CBLU 
+ 
+    <div class="card-footer">
+      <a   href="https://wa.me/918168173141"><img  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
+      <a  href="https://www.instagram.com/2005deepu2025?igsh=ZjFiYmRrNTVlc3I0"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
+      <a  href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://static.vecteezy.com/system/resources/previews/018/930/694/original/snapchat-logo-snapchat-icon-transparent-free-png.png"></a>
+      <a  href="mailto:deepaksinghal200511@gmail.com"><img  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a>
+    </div>
+    </div>
+  </div>
+ </div>
+        </div> 
+      </div>
+    </div>
+    </div>
 <hr>
     <div class="y"> 
     <marquee direction="right" scrollamount="5" scrolldelay="3"> 
@@ -135,6 +157,13 @@ and you can write your problems ,then i will suggest you</h4>
     h1{
         background-color: darkgoldenrod;      
     }
+    .card{
+      border-radius: 15px;
+    }
+    .card-footer img{
+width: 40px;
+height: 40px;
+    }
     .you{
       height: 40px;
       width: 40px;
@@ -143,8 +172,16 @@ and you can write your problems ,then i will suggest you</h4>
     h6{
       text-align: center;
     }
+    .a3{
+      height: 50px;
+      width: 50px;
+      display:contents;
+    }
     h4{
         background-color: chartreuse;
+    }
+    .card{
+      justify-content: center;
     }
      .mar{
         color: white;
@@ -185,12 +222,6 @@ and you can write your problems ,then i will suggest you</h4>
         background: linear-gradient(to left,black,orange);    
         text-shadow: 2px 2px green; 
     }     
-    .y{
-      background: linear-gradient(52deg,green,yellow,red,darkslategray,white,pink,darkorchid);
-        border-radius:1cm;  
-        text-shadow: 1px 1px red;
-      }
-     
       .row-2{
         background-color: grey;
         border-radius: 20px;
