--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -103,7 +103,8 @@
     </div>
     <style>
         body{
-            background: linear-gradient(-52deg,purple,yellow,darkorchid,darkslategray,white,pink,darkorchid);
+ background-image: URL("https://1.bp.blogspot.com/-Tww-CVZ62HE/VLk7semqD0I/AAAAAAAAE6A/zYHC2EFMxgc/s1600/Pollution.jpg");
+            background-repeat: no-repeat;
             background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
             margin-right: 10px;
