--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -111,8 +111,9 @@
         border-radius: 10cm;
     }
      body{
-        background: linear-gradient(-52deg,bisque,yellow,white,pink,darkorange);
-            background-size: 400% 400%;
+ background-image: URL("https://wallpapercave.com/wp/uYnlCfL.jpg");
+        background-repeat: no-repeat;
+        background-size: 400% 400%;
             animation: bg 12s ease-in-out infinite;
             margin-right: 10px;
             margin-left: 10px;
