--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
     <div class="card-header"> 
     <div class="card">
       <div class="card-body">
-        <div class="card-img" img="left"> 
-        <img class="vaish2005" src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg">
+        <img class="card-img-top"src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg">
         <div class="card-h6">
  Name:deepak aggarwal
- <div class="card-h6">
+ <di class="card-h6">
   Degree:BCA 
   <div class="card-h6">
     Certificate:HKCL(3 and 6 months)
@@ -33,14 +32,13 @@
     <div class="card-footer">
       <a   href="https://wa.me/918168173141"><img  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
       <a  href="https://www.instagram.com/2005deepu2025?igsh=ZjFiYmRrNTVlc3I0"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
-      <a  href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://static.vecteezy.com/system/resources/previews/018/930/694/original/snapchat-logo-snapchat-icon-transparent-free-png.png"></a>
+      <a  href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a>
       <a  href="mailto:deepaksinghal200511@gmail.com"><img  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a>
     <h5>Contacts</h5>
     </div>
     </div>
   </div>
- </div>
-        </div> 
+        </div>
       </div>
     </div>
   </div>
@@ -138,7 +136,7 @@ and you can write your problems ,then i will suggest you</h4>
             <td>4</td>
             <td>----</td>
             <td>snapchat</td>
-            <td><a href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://static.vecteezy.com/system/resources/previews/018/930/694/original/snapchat-logo-snapchat-icon-transparent-free-png.png"></a></td>
+            <td><a href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a></td>
             
           </tr>
       </div>
@@ -154,9 +152,6 @@ and you can write your problems ,then i will suggest you</h4>
     h1{
         background-color: darkgoldenrod;      
     }
-    .card{
-      border-radius: 15px;
-    }
     .card-header{
       background-color: azure;
       background-image: URL("https://tse3.mm.bing.net/th?id=OIP.hhjh0JLCBVYylMFSi32LIQHaF0&pid=Api&P=0&h=180");
@@ -164,6 +159,10 @@ and you can write your problems ,then i will suggest you</h4>
     .card-footer img{
 width: 40px;
 height: 40px;
+    }
+    .card-img-top{
+      border-radius: 5px;
+      height: 150px;
     }
     .you{
       height: 40px;
@@ -217,18 +216,7 @@ height: 40px;
         margin-left: 26px;
         background: linear-gradient(to left,black,orange);    
         text-shadow: 2px 2px green; 
-    }     
-      .row-2{
-        background-color: grey;
-        border-radius: 20px;
-        text-shadow: 1px 1px 1px 1px gold;
-        
-      }   
-      .tab-content{
-        background-color: white;
-        text-shadow: none;
-        color: black;
-             }  
+    }        
        .shalu{
         color: white;
         height: 40px;
@@ -273,7 +261,7 @@ height: 40px;
         width: 70px;
       }
       .nav-link{
-        color: purple;
+        color: gold;
         border-radius: 10px;
       }
       .nav-link:hover{
