--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@ height: 40px;
       border-radius: 5px;
       height: 150px;
     }
+    .row-2{
+        background-color: grey;
+        border-radius: 20px;
+        text-shadow: 1px 1px 1px 1px gold;
+    }
     .you{
       height: 40px;
       width: 40px;
