--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img class="card-img-top"src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg">
         <div class="card-h6">
  Name:deepak aggarwal
- <di class="card-h6">
+ <div class="card-h6">
   Degree:BCA 
   <div class="card-h6">
     Certificate:HKCL(3 and 6 months)
