--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a  href="https://www.instagram.com/2005deepu2025?igsh=ZjFiYmRrNTVlc3I0"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
       <a  href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a>
       <a  href="mailto:deepaksinghal200511@gmail.com"><img  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a>
-    <h5>Click here</h5>
+    <h5>Contacts</h5>
     </div>
     </div>
   </div>
@@ -112,7 +112,7 @@ and you can write your problems ,then i will suggest you</h4>
             <th>No.</th>
             <th>Profile</th>
             <th>Medium</th>
-            <th>Contact</th>
+            <th>Click here</th>
           </tr>
           <tr>
             <td>1</td>
