--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  <div class="card-h6">
   Degree:BCA 
   <div class="card-h6">
-    Certificate:HKCL(3 and 6 months)
+    Diploma:HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
     <div class="card-h6">
       University:CBLU 
     <div class="card-footer">
