--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <div class="card-body">
         <img class="card-img-top"src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg">
         <div class="card-h6">
- Name:deepak aggarwal
+ ->Name:deepak aggarwal
  <div class="card-h6">
-  Degree:BCA 
+  ->Degree:BCA 
   <div class="card-h6">
-    Diploma:HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
+    ->Diploma:HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
     <div class="card-h6">
-      University:CBLU 
+      ->University:CBLU 
     <div class="card-footer">
       <a   href="https://wa.me/918168173141"><img  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
       <a  href="https://www.instagram.com/2005deepu2025?igsh=ZjFiYmRrNTVlc3I0"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
