--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <marquee class="mar">
         <h2 <style'font-size:100px;'>&#9749;</style>YOU ARE MOST WELCOME TO VISIT ON MY WEBSITE </h2>
     </marquee>
+    <hr><table> 
+      <tr> 
+         <th><a class="tu" href="index.html">home section</a></th> 
+          <th><a class="tu" href="notes.html">random notes</a></th>  
+                   <th><a class="tu" href="Squestionpaper.html">School Section</a></th> 
+                     <th><a class="tu" href="Cquestionpaper.html">College Section</a></th>
+                 </tr>
+                </table>
+    <hr>
   </div>
     <hr>  
     <div class="card-header"> 
@@ -61,15 +70,6 @@
   </marquee>
   </div>
   <hr>
-<table> 
-  <tr> 
-     <th><a class="tu" href="index.html">home section</a></th> 
-      <th><a class="tu" href="notes.html">random notes</a></th>  
-               <th><a class="tu" href="Squestionpaper.html">School Section</a></th> 
-                 <th><a class="tu" href="Cquestionpaper.html">College Section</a></th>
-             </tr>
-            </table>
-<hr>
 <div class="container-2"> 
   <div class="row-2">
       <div class="col"> 
