--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <marquee class="mar">
         <h2 <style'font-size:100px;'>&#9749;</style>YOU ARE MOST WELCOME TO VISIT ON MY WEBSITE </h2>
     </marquee>
-    <hr><table> 
+    <hr>
+    <table> 
       <tr> 
          <th><a class="tu" href="index.html">home section</a></th> 
           <th><a class="tu" href="notes.html">random notes</a></th>  
@@ -31,7 +32,7 @@
       <div class="card-body">
         <img class="card-img-top"src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg">
         <div class="card-h6">
-          Name:deepak aggarwal
+         Name:deepak aggarwal
  <div class="card-h6">
   Degree:BCA 
   <div class="card-h6">
