--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ and you can write your problems ,then i will suggest you</h4>
             <td>3</td>
             <td><img src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg" ></td>
             <td>instagram/<br>threads</td>
-            <td><a href="https://www.instagram.com/2005deepu2025?igsh=ZjFiYmRrNTVlc3I0"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a></td>
+            <td><a href=" "><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a></td>
           </tr>
           <tr>
             <td>4</td>
@@ -139,6 +139,11 @@ and you can write your problems ,then i will suggest you</h4>
             <td>snapchat</td>
             <td><a href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a></td>
             
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>facebook</td>
+            <a href="https://www.facebook.com/share/14yQhC9rgg/"><img src="https://tse3.mm.bing.net/th?id=OIP.FQYyu80e7eHzc3lbL4BzBQHaHY&pid=Api&P=0&h=180"></a>
           </tr>
       </div>
     </table>
