--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ and you can write your problems ,then i will suggest you</h4>
           <tr>
             <td>5</td>
             <td>facebook</td>
-            <a href="https://www.facebook.com/share/14yQhC9rgg/"><img src="https://tse3.mm.bing.net/th?id=OIP.FQYyu80e7eHzc3lbL4BzBQHaHY&pid=Api&P=0&h=180"></a>
+           <td> <a href="https://www.facebook.com/share/14yQhC9rgg/"><img src="https://tse3.mm.bing.net/th?id=OIP.FQYyu80e7eHzc3lbL4BzBQHaHY&pid=Api&P=0&h=180"></a></td> 
           </tr>
       </div>
     </table>
