--- a/index.html
+++ b/index.html
@@ -30,18 +30,19 @@
     <div class="card-header"> 
       <div class="card">
       <div class="card-body">
-        <img class="card-img-top"src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg">
+        <img class="card-img-top"src=" https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg">
         <div class="card-h6">
          Name:deepak aggarwal
  <div class="card-h6">
-  Degree:BCA 
+  <h5> Degree:</h5>BCA (pursuing)
   <div class="card-h6">
-    Diploma:HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
+    <h5>Diploma</h5> :HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
+    <h5>course include:</h5>basic comp,office assistant,advance excel,security support it
     <div class="card-h6">
-     University:CBLU 
+     <h5> University</h5>:CBLU 
     <div class="card-footer">
       <a   href="https://wa.me/918168173141"><img  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
-      <a  href="https://www.instagram.com/2005deepu2025?igsh=ZjFiYmRrNTVlc3I0"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
+      <a  href=" "><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
       <a  href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a>
       <a  href="mailto:deepaksinghal200511@gmail.com"><img  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a>
     <h5>Contacts</h5>
@@ -142,6 +143,7 @@ and you can write your problems ,then i will suggest you</h4>
           </tr>
           <tr>
             <td>5</td>
+            <td><img src="https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg"></td>
             <td>facebook</td>
            <td> <a href="https://www.facebook.com/share/14yQhC9rgg/"><img src="https://tse3.mm.bing.net/th?id=OIP.FQYyu80e7eHzc3lbL4BzBQHaHY&pid=Api&P=0&h=180"></a></td> 
           </tr>
