--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h2 <style'font-size:100px;'>&#9749;</style>YOU ARE MOST WELCOME TO VISIT ON MY WEBSITE </h2>
     </marquee>
     <hr>
+    <h2>YOUTUBE CHANNEL:<a href="https://youtube.com/@deepak2005aggarwal?si=sdQe9MEumbhu48ts"><img src="https://tse2.mm.bing.net/th?id=OIP.CFRiwx63-24Nub2sA-HTHAHaEe&pid=Api&P=0&h=180"></a></h2>
     <table> 
       <tr> 
          <th><a class="tu" href="index.html">home section</a></th> 
@@ -34,12 +35,12 @@
         <div class="card-h6">
          Name:deepak aggarwal
  <div class="card-h6">
-  <h5> Degree:</h5>BCA (pursuing)
+  <h7> Degree:</h7>BCA (pursuing)
   <div class="card-h6">
-    <h5>Diploma</h5> :HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
-    <h5>course include:</h5>basic comp,office assistant,advance excel,security support it
+    <h7>Diploma</h7> :HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
+    <h7>course include:</h7>basic comp,office assistant,advance excel,security support it
     <div class="card-h6">
-     <h5> University</h5>:CBLU 
+     <h7> University</h7>:CBLU 
     <div class="card-footer">
       <a   href="https://wa.me/918168173141"><img  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
       <a  href=" "><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
@@ -124,14 +125,14 @@ and you can write your problems ,then i will suggest you</h4>
           </tr>
           <tr>
             <td>2</td>
-            <td><img src="https://i.im.ge/2025/02/12/HjzV3T.1000020581.png"></td>
+            <td><img src="https://i.im.ge/2025/03/11/p2wQPC.1000022996.jpeg"></td>
             <td>Email</td>
             <td><a href="mailto:deepaksinghal200511@gmail.com"><img src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a> </td>
           </tr>
           <tr>
             <td>3</td>
-            <td><img src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg" ></td>
-            <td>instagram/<br>threads</td>
+            <td><img src=" " ></td>
+            <td>instagram</td>
             <td><a href=" "><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a></td>
           </tr>
           <tr>
@@ -167,6 +168,10 @@ and you can write your problems ,then i will suggest you</h4>
     .card-footer img{
 width: 40px;
 height: 40px;
+   }
+   h7{
+    color: darkred;
+    background-color: lightpink;
    }
     .card-img-top{
       border-radius: 5px;
