--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="card-body">
         <img class="card-img-top"src=" https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg">
         <div class="card-h6">
-         Name:deepak aggarwal
+         <h7> Name:</h7>deepak aggarwal
  <div class="card-h6">
   <h7> Degree:</h7>BCA (pursuing)
   <div class="card-h6">
