--- a/index.html
+++ b/index.html
@@ -59,17 +59,18 @@
 <div class="box-56"> 
   <h2 class="dep-78">NOTICES</h2>
   <marquee direction="up" scrollamount="4" scrolldelay="4">
-    <h6 class="dep-1"><sup class="dep">new</sup>12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
+    <h6 class="dep-1"><sup class="dep">new</sup>a youtube channel created for coding wher now in persent time c++ coding available</h6>
+    <h6 > >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
     <hr>
-    <h6 class="dep-1"><sup class="dep">new</sup>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
+    <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
     <hr>
-    <h6 class="dep-1"><sup class="dep">new</sup>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
+    <h6>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
   <hr>
   <h6  class="dep-1"> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded</h6>
   <hr>
-  <h6 class="dep-1"><sup class="dep">new</sup>Complete website and its contents updated</h6>    
+  <h6>Complete website and its contents updated</h6>    
   <hr>
-  <h6 class="dep-1"><sup class="dep">new</sup>Foundation of cs-1st sem(practical uploaded)</h6>
+  <h6  >Foundation of cs-1st sem(practical uploaded)</h6>
   </marquee>
   </div>
   <hr>
@@ -172,6 +173,7 @@ height: 40px;
    h7{
     color: darkred;
     background-color: lightpink;
+    text-align: center;
    }
     .card-img-top{
       border-radius: 5px;
