--- a/index.html
+++ b/index.html
@@ -33,20 +33,21 @@
       <div class="card-body">
         <img class="card-img-top"src=" https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg">
         <div class="card-h6">
-         <h7> Name:</h7>deepak aggarwal
+         <h5> Name:</h5>deepak aggarwal
  <div class="card-h6">
   <h7> Degree:</h7>BCA (pursuing)
   <div class="card-h6">
-    <h7>Diploma</h7> :HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
-    <h7>course include:</h7>basic comp,office assistant,advance excel,security support it
+    <h5>Diploma</h5> :HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
+    <h5>course include:</h5>basic comp,office assistant,advance excel,security support it
     <div class="card-h6">
-     <h7> University</h7>:CBLU 
+     <h5> University</h5>:CBLU 
     <div class="card-footer">
       <a   href="https://wa.me/918168173141"><img  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
       <a  href=" "><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
       <a  href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a>
-      <a  href="mailto:deepaksinghal200511@gmail.com"><img  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a>
-    <h5>Contacts</h5>
+      <a  href="mailto:deepaksinghal200511@gmail.com"><img  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a>    
+     <a href="https://www.facebook.com/share/14yQhC9rgg/"><img src="https://tse3.mm.bing.net/th?id=OIP.FQYyu80e7eHzc3lbL4BzBQHaHY&pid=Api&P=0&h=180"></a></td> 
+      <h5>Contacts</h5>
     </div>
     </div>
   </div>
@@ -60,17 +61,17 @@
   <h2 class="dep-78">NOTICES</h2>
   <marquee direction="up" scrollamount="4" scrolldelay="4">
     <h6 class="dep-1"><sup class="dep">new</sup>a youtube channel created for coding wher now in persent time c++ coding available</h6>
-    <h6 > >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
+    <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
     <hr>
     <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
     <hr>
     <h6>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
   <hr>
-  <h6  class="dep-1"> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded</h6>
+  <h6> 12th class preboard(MEDICAL/non-medical,POlitical science,<br>,fine arts,grography,history),model-question-paper(2025-physics,chemistry ,maths,biology)<br>notes of physics(Electrostatic)releasded</h6>
   <hr>
   <h6>Complete website and its contents updated</h6>    
   <hr>
-  <h6  >Foundation of cs-1st sem(practical uploaded)</h6>
+  <h6 >Foundation of cs-1st sem(practical uploaded)</h6>
   </marquee>
   </div>
   <hr>
@@ -170,11 +171,6 @@ and you can write your problems ,then i will suggest you</h4>
 width: 40px;
 height: 40px;
    }
-   h7{
-    color: darkred;
-    background-color: lightpink;
-    text-align: center;
-   }
     .card-img-top{
       border-radius: 5px;
       height: 150px;
@@ -190,6 +186,7 @@ height: 40px;
       margin-left: 100px;
     }
     h6{
+      color: azure;
       text-align: center;
     }
     h4{
@@ -197,7 +194,7 @@ height: 40px;
     }
     h5{
       text-align: center;
-      background-color: lightyellow;
+      background-color: red;
     }
     .card{
       justify-content: center;
@@ -266,8 +263,7 @@ height: 40px;
         color: red;
       }
       .box-56{
-        background-image: URL("https://mastipak.ucoz.net/images/Flowers_wallpaper.jpg");
-        background-repeat: no-repeat;
+        background-color: black;
       }   
       .dep-78{
         background-color:chartreuse;
