--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <div class="card-h6">
          <h5> Name:</h5>deepak aggarwal
  <div class="card-h6">
-  <h7> Degree:</h7>BCA (pursuing)
+  <h5> Degree:</h5>BCA (pursuing)
   <div class="card-h6">
     <h5>Diploma</h5> :HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
     <h5>course include:</h5>basic comp,office assistant,advance excel,security support it
     <div class="card-h6">
-     <h5> University</h5>:CBLU 
+     <h5> University:</h5>Chaudhary Bansilal University
     <div class="card-footer">
       <a   href="https://wa.me/918168173141"><img  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
       <a  href=" "><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
@@ -61,6 +61,7 @@
   <h2 class="dep-78">NOTICES</h2>
   <marquee direction="up" scrollamount="4" scrolldelay="4">
     <h6 class="dep-1"><sup class="dep">new</sup>a youtube channel created for coding wher now in persent time c++ coding available</h6>
+    <hr>
     <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
     <hr>
     <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
