--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -29,10 +29,10 @@
     <img src= "https://i.im.ge/2025/01/15/zBjSZq.1000016724.webp"> 
 </div>
 <div class="slide slide-2"> 
-     <img src="https://i.im.ge/2025/01/21/HMzJ5y.1000005345.webp"> 
+     <img src=" https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg"> 
     </div>
 <div class="slide slide-3"> 
-    <img src= "https://i.im.ge/2025/01/21/HMzHfa.1000013746.webp">
+    <img src= " ttps://i.im.ge/2025/03/11/p2wQPC.1000022996.jpeg">
 </div>
 </div>
 </div>
