--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ and you can write your problems ,then i will suggest you</h4>
           </tr>
           <tr>
             <td>1</td>
-            <td><img src="https://i.im.ge/2025/02/12/HjzEnq.1000020133.jpeg" ></td>
+            <td><img src="  https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg" ></td>
             <td>Whatshap</td>
             <td><a href="https://wa.me/918168173141"><img src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a></td>
           </tr>
