--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -22,7 +22,7 @@
                    </tr>
                   </table>
     <hr>
-    <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
+    <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
     <hr>
     <marquee direction="left" scrollamount="4" scrolldelay="3">
         <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
