--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -21,7 +21,7 @@
                    </tr>
                   </table>
  <hr>
- <a href="https://wa.me/918168173141" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
+ <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
  <hr>
  <div class="box"> 
  <div id="slides"> 
@@ -100,7 +100,11 @@
             <tr>
                 <td>6</td>
                 <td>12th hindi question paper-2025</td>
+                <td><a href="https://drive.google.com/file/d/1CXOhAGt9VUfwp8vF3hungRLNaRPuOCxv/view?usp=drivesdk">download</a></td>
             </tr>
+            <td>7 </td>
+            <td>12TH question paper(medical/non-medical-2025)</td>
+            <td><a href="https://drive.google.com/file/d/1D3HvFdL5FD3VJpufQl3AVjN_v2O3Ko3a/view?usp=drivesdk">download</a></td>
             </table>
     </div>
 </div>
