--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   </head>
 <body>
   <marquee class="mar">
@@ -59,8 +62,7 @@
 <div class="box-56"> 
   <h2 class="dep-78">NOTICES</h2>
   <marquee direction="up" scrollamount="4" scrolldelay="4">
-    <h6 class="dep-1"><sup class="dep">new</sup>a youtube channel created for coding wher now in persent time c++ coding available</h6>
-    <hr>
+    <h6>12th (medical/non-medical) question-paper-2025 released <sup class="red">11-04-2025</h6>
     <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
     <hr>
     <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
@@ -170,6 +172,10 @@ and you can write your problems ,then i will suggest you</h4>
     .card-footer img{
 width: 40px;
 height: 40px;
+   }
+   .red{
+    color:green;
+    background-color:yellow;
    }
     .card-img-top{
       border-radius: 5px;
