--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
   <h2 class="dep-78">NOTICES</h2>
   <marquee direction="up" scrollamount="4" scrolldelay="4">
     <h6>12th (medical/non-medical) question-paper-2025 released <sup class="red">11-04-2025</h6>
-    <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper</h6>
+    <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper <sup class="red">10-01-2025</h6>
     <hr>
-    <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes</h6>
+    <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes<sup class="red">01-11-2024</h6>
     <hr>
     <h6>CBLU 1stsem.(assignment of foundation of cs(topic:Electronic mail<br>,web browser,search engines),practical of maths,questionpaper(Human value and ethics,communicative skills in english,basic it tools,csr and business ethics)) released</h6>
   <hr>
@@ -73,7 +73,7 @@
   <hr>
   <h6>Complete website and its contents updated</h6>    
   <hr>
-  <h6 >Foundation of cs-1st sem(practical uploaded)</h6>
+  <h6 >Foundation of cs-1st sem(practical uploaded)<sup class="red">15-10-2024</h6>
   </marquee>
   </div>
   <hr>
