--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ height: 40px;
     h6{
       color: azure;
       text-align: center;
+      background-color: blue;
     }
     h4{
         background-color: chartreuse;
