--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="box-56"> 
   <h2 class="dep-78">NOTICES</h2>
   <marquee direction="up" scrollamount="4" scrolldelay="4">
-    <h6>12th (medical/non-medical) question-paper-2025 released <sup class="red">11-04-2025</h6>
+    <h6><a href="https://drive.google.com/file/d/1D3HvFdL5FD3VJpufQl3AVjN_v2O3Ko3a/view?usp=drivesdk">12th (medical/non-medical) question-paper-2025 released <sup class="red">11-04-2025</a></h6>
     <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper <sup class="red">10-01-2025</h6>
     <hr>
     <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes<sup class="red">01-11-2024</h6>
