--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 <hr>
 <div class="box-56"> 
   <h2 class="dep-78">NOTICES</h2>
-  <marquee direction="up" scrollamount="4" scrolldelay="4">
-     <a href="https://drive.google.com/file/d/1D3HvFdL5FD3VJpufQl3AVjN_v2O3Ko3a/view?usp=drivesdk">12th (medical/non-medical) question-paper-2025 released</a>
+  <marquee direction="down" scrollamount="4" scrolldelay="4">
+    <h6>12th (medical/non-medical) question-paper-2025 released <sup class="red">11-04-2025</h6>
     <h6 >12TH previous year chmistry question paper uploaded(2024) in the school section-questionpaper <sup class="red">10-01-2025</h6>
     <hr>
     <h6>NOW,You can see/download all files/documents/pdf/practical<br>/assignments/questionpaper  which are available in section of school and colleg and random notes<sup class="red">01-11-2024</h6>
@@ -194,14 +194,14 @@ height: 40px;
     h6{
       color: azure;
       text-align: center;
-      background-color: blue;
+      background-color: darkslategray;
     }
     h4{
         background-color: chartreuse;
     }
     h5{
       text-align: center;
-      background-color: red;
+      background-color: darkgoldenrod;
     }
     .card{
       justify-content: center;
