--- a/index.html
+++ b/index.html
@@ -35,21 +35,22 @@
       <div class="card-body">
         <img class="card-img-top"src=" https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg">
         <div class="card-h6">
-         <h5> Name:</h5>deepak aggarwal
+         <h5> Name:</h5><h3>deepak aggarwal</h3>
  <div class="card-h6">
-  <h5> Degree:</h5>BCA (pursuing)
+  <h5> Degree:</h5><h3>BCA (pursuing)</h3>
   <div class="card-h6">
-    <h5>Diploma</h5> :HKCL(HS-CIT and HS-CIT(A))or3 or 6 months
-    <h5>course include:</h5>basic comp,office assistant,advance excel,security support it
+    <h5>Diploma</h5> 
+    <h3>HKCL(HS-CIT and HS-CIT(A))or3 or 6 months</h3>
+    <h5>course include:</h5><h3>basic comp,office assistant,advance excel,security support it</h3>
     <div class="card-h6">
-     <h5> University:</h5>Chaudhary Bansilal University
+     <h5> University:</h5><h3>Chaudhary Bansilal University</h3>
     <div class="card-footer">
       <a   href="https://wa.me/"><img  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a>
       <a  href=" "><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a>
       <a  href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a>
       <a  href="mailto:deepaksinghal200511@gmail.com"><img  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a>    
      <a href="https://www.facebook.com/share/14yQhC9rgg/"><img src="https://tse3.mm.bing.net/th?id=OIP.FQYyu80e7eHzc3lbL4BzBQHaHY&pid=Api&P=0&h=180"></a></td> 
-      <h5>Contacts</h5>
+      <h5 class="h">Contacts</h5>
     </div>
     </div>
   </div>
@@ -97,7 +98,7 @@
              <h4>Home section contains three parts:
               <br>first for videos ,videos will be entertainment,motivational,thought<br>study related<br>second for section details ,which we have already discussed in section details and third for contact ,onecan contact me on whatshap or email
 and you can write your problems ,then i will suggest you</h4>    
-                   <hr>
+                   <br>
               <h1>random notes</h1>
       <h4> random notes will conatin all general notes  for incresaing knowlege</h4>
       <hr>
@@ -125,7 +126,7 @@ and you can write your problems ,then i will suggest you</h4>
             <td>1</td>
             <td><img src="  https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg" ></td>
             <td>Whatshap</td>
-            <td><a href="https://wa.me/918168173141"><img src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a></td>
+            <td><a href="https://wa.me/91"><img src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a></td>
           </tr>
           <tr>
             <td>2</td>
@@ -162,6 +163,13 @@ and you can write your problems ,then i will suggest you</h4>
 <hr>
 </body>
 <style>
+  .h{
+    background-color: violet;
+  }
+   h3{
+    text-align: center;
+    background-color: cornflowerblue;
+  }
     h1{
         background-color: darkgoldenrod;      
     }
@@ -197,11 +205,12 @@ height: 40px;
       background-color: darkslategray;
     }
     h4{
-        background-color: chartreuse;
+        background-color: orchid;
     }
     h5{
       text-align: center;
       background-color: darkgoldenrod;
+      color: darkgreen;
     }
     .card{
       justify-content: center;
@@ -308,13 +317,19 @@ height: 40px;
         color: yellowgreen;
         text-decoration: none;
       }
+      .tu{
+        color: green;
+      }
        .tu:hover{
-        color: white;
+        color: gold;
        }
        .yupi{
         height: 90px;
         width: 100px;
         border-radius: 10cm;
+       }
+       .card-footer{
+        background-color: black;
        }
     </style> 
 </html>
