--- a/notes.html
+++ b/notes.html
@@ -14,10 +14,10 @@
 <body>
   <table>      
           <tr>            
-            <th><a  class="tu" href="index.html">home section</a></th>
+            <th><a  class="tu" href="index.html"><i class="fa-solid fa-house fa-beat fa-lg" style="color: #63E6BE;"></i></a></th>
            <th><a class="tu" href="notes.html">random notes</a> </th> 
               <th> <a class="tu" href="Squestionpaper.html">School Section</a></th>  
-              <th><a class="tu" href="Cquestionpaper.html">College Section</a></th> 
+              <th><a class="tu" href="Cquestionpaper.html"><i class="fa-solid fa-graduation-cap fa-bounce fa-lg" style="color: #FFD43B;"></i></a></th> 
  </tr>
 </table>
  <hr>
