--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <hr>
+               <a class="tuy" href="index.html"><i class="fa-solid fa-house fa-beat fa-lg" style="color: #63E6BE;"><br></i></a>
     <table > 
         <tr> 
-           <th><a class="tu" href="index.html">home section</a></th> 
-            <th><a class="tu" href="notes.html">random notes</a></th>  
-                     <th><a class="tu" href="Squestionpaper.html">School Section</a></th> 
+            <th><a class="tu" href="notes.html">random-notes</a></th>  
+                     <th><a class="tu" href="Squestionpaper.html"><i class="fa-solid fa-school fa-spin fa-lg" style="color:red;">school</i></i></a></th> 
                        <th><a class="tu" href="Cquestionpaper.html">College Section</a></th>
                    </tr>
                   </table>
@@ -120,6 +120,9 @@
           100%{
             background-position: 0% 50%;
           }
+        }
+        .tuy{
+        color: brown;
         }
         .row-2{
             background-color: cadetblue;
