--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@ height: 40px;
       color: azure;
       text-align: center;
       background-color: darkslategray;
+    }a{
+      gap: 2cm;
     }
     h4{
         background-color: orchid;
