--- a/notes.html
+++ b/notes.html
@@ -70,7 +70,7 @@ background-repeat: no-repeat;
     a{
         color: palevioletred;
         text-decoration: none;
-        
+        gap: 2cm;
         text-shadow: 1px 1px palevioletred;
     }
     a:hover{
@@ -97,6 +97,10 @@ background-repeat: no-repeat;
    }
    .tu{
     color: black;
+    gap: 2cm;
+   }
+   a{
+    gap: 2cm;
    }
  </style>
 </body>
