--- a/Squestionpaper.html
+++ b/Squestionpaper.html
@@ -12,18 +12,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <table > 
-        <tr> 
-           <th><a class="tu" href="index.html"><i class="fa-solid fa-house fa-beat fa-lg" style="color: #63E6BE;"></i></a></th> 
-            <th><a class="tu" href="notes.html">random notes</a></th>  
-                     <th><a class="tu" href="Squestionpaper.html">School Section</a></th> 
-                       <th><a class="tu" href="Cquestionpaper.html">College Section</a></th>
-                   </tr>
-                  </table>
- <hr>
- <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
- <hr>
- <div class="box"> 
+    <marquee direction="left" scrollamount="4" scrolldelay="3">
+    <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
+</marquee>
+             <div class="border">
+            <a href="index.html"><img  class="laptop" src="images/home.jpg"></a><h9 class="te">home</h9><br>
+           <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
+                     <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9><br>
+  </div>
+  <hr>
+  <div class="box"> 
  <div id="slides"> 
      <div class="slide slide-1" > 
     <img src= "https://i.im.ge/2025/01/15/zBjSZq.1000016724.webp"> 
@@ -36,10 +34,6 @@
 </div>
 </div>
 </div>
-<hr> 
-<marquee direction="left" scrollamount="4" scrolldelay="3">
-    <h2 <style'font-size:100px;'>&#9749;</style>SCHOOL SECTION</h2>
-</marquee>
 <hr>
 <div class="container-2"> 
     <div class="row-2">
@@ -137,6 +131,23 @@
             background-position: 0% 50%;
           }
     }
+      .border{
+    background-color: forestgreen;
+  }
+  .te{
+    text-align: center;
+    margin-left: 2cm;
+    color: black;
+  }
+  .laptop{
+   margin-left: 1cm;
+    gap: 2cm;
+    display: flex;
+    height: 150px;
+    width: 250px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+  }
     a{
         color: dimgrey;
         text-decoration: none;
