--- a/index.html
+++ b/index.html
@@ -19,14 +19,10 @@
         <h2 <style'font-size:100px;'>&#9749;</style>YOU ARE MOST WELCOME TO VISIT ON MY WEBSITE </h2>
     </marquee>
     <hr>
-     <table> 
-      <tr> 
-           <th><a class="tu" href="notes.html">random notes</a></th>  
-                   <th><a class="tu" href="Squestionpaper.html">School Section</a></th> 
-                     <th><a class="tu" href="Cquestionpaper.html">College Section</a></th>
-                 </tr>
-                </table>
-    <hr>
+    <div class="border">
+           <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
+                   <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9<br>
+                    <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9<br>
   </div>
     <hr>  
     <div class="card-header"> 
@@ -123,34 +119,34 @@ and you can write your problems ,then i will suggest you</h4>
           </tr>
           <tr>
             <td>1</td>
-            <td><img src="  https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg" ></td>
+            <td><img class="gallery" src="  https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg" ></td>
             <td>Whatshap</td>
-            <td><a href="https://wa.me/91"><img src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a></td>
+            <td><a href="https://wa.me/91"><img  class="gallery"  src="https://tse2.mm.bing.net/th?id=OIP.k1GZiULqC-enIxWAptfRZwHaHa&pid=Api&P=0&h=180"></a></td>
           </tr>
           <tr>
             <td>2</td>
-            <td><img src="https://i.im.ge/2025/03/11/p2wQPC.1000022996.jpeg"></td>
+            <td><img  class="gallery"  src="https://i.im.ge/2025/03/11/p2wQPC.1000022996.jpeg"></td>
             <td>Email</td>
-            <td><a href="mailto:deepaksinghal200511@gmail.com"><img src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a> </td>
+            <td><a href="mailto:deepaksinghal200511@gmail.com"><img  class="gallery"  src="https://tse3.mm.bing.net/th?id=OIP.avrfEZK7jrm-weDud78d-wHaHa&pid=Api&P=0&h=180"></a> </td>
           </tr>
           <tr>
             <td>3</td>
-            <td><img src=" " ></td>
+            <td><img   class="gallery" src=" " ></td>
             <td>instagram</td>
-            <td><a href=" "><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a></td>
+            <td><a href=" "><img   class="gallery" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"></a></td>
           </tr>
           <tr>
             <td>4</td>
             <td>----</td>
             <td>snapchat</td>
-            <td><a href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a></td>
+            <td><a href="https://www.snapchat.com/add/aggarwal112005?share_id=83UUgJGk0ts&locale=en-GB"><img   class="gallery" src="https://tse4.mm.bing.net/th?id=OIP.H_pyhQR4vJ8EKxBe0bnu1gHaHa&pid=Api&P=0&h=180"></a></td>
             
           </tr>
           <tr>
             <td>5</td>
-            <td><img src="https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg"></td>
+            <td><img   class="gallery"  src="https://i.im.ge/2025/03/11/p2mm51.1000025407.jpeg"></td>
             <td>facebook</td>
-           <td> <a href="https://www.facebook.com/share/14yQhC9rgg/"><img src="https://tse3.mm.bing.net/th?id=OIP.FQYyu80e7eHzc3lbL4BzBQHaHY&pid=Api&P=0&h=180"></a></td> 
+           <td> <a href="https://www.facebook.com/share/14yQhC9rgg/"><img  class="gallery"  src="https://tse3.mm.bing.net/th?id=OIP.FQYyu80e7eHzc3lbL4BzBQHaHY&pid=Api&P=0&h=180"></a></td> 
           </tr>
       </div>
     </table>
@@ -162,6 +158,22 @@ and you can write your problems ,then i will suggest you</h4>
 <hr>
 </body>
 <style>
+  .border{
+    background-color: forestgreen;
+  }
+  .te{
+    text-align: center;
+    margin-left: 2cm;
+    color:black;
+  }
+  .laptop{
+     margin-left: 1cm;
+    gap: 2cm;
+    display: flex;
+    height: 150px;
+    width: 250px;
+   
+  }
   .h{
     background-color: violet;
   }
@@ -238,11 +250,6 @@ height: 40px;
             background-position: 0% 50%;
           }
         }
-    .pic{
-        border-radius: 10cm;
-        height: 100px;
-        width: 100px;   
-    }
     .name{
         color: aliceblue;
         background-color: black;
@@ -288,7 +295,7 @@ height: 40px;
         text-align: center;
         border-radius: 20px;
       }
-      img{
+       .gallery{
         border-radius: 10cm;
         height: 70px;
         width: 70px;
@@ -318,12 +325,6 @@ height: 40px;
         color: yellowgreen;
         text-decoration: none;
       }
-      .tu{
-        color: green;
-      }
-       .tu:hover{
-        color: gold;
-       }
        .yupi{
         height: 90px;
         width: 100px;
