--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -12,21 +12,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <hr>
-               <a class="tuy" href="index.html"><i class="fa-solid fa-house fa-beat fa-lg" style="color: #63E6BE;"><br></i></a>
-    <table > 
-        <tr> 
-            <th><a class="tu" href="notes.html">random-notes</a></th>  
-                     <th><a class="tu" href="Squestionpaper.html"><i class="fa-solid fa-school fa-spin fa-lg" style="color:red;">school</i></i></a></th> 
-                       <th><a class="tu" href="Cquestionpaper.html">College Section</a></th>
-                   </tr>
-                  </table>
-    <hr>
-    <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
-    <hr>
     <marquee direction="left" scrollamount="4" scrolldelay="3">
         <h2 <style'font-size:100px;'>&#9749;</style>COLLEGE SECTION</h2>
     </marquee>
+    <hr>
+        <div class="border">
+            <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">home</h9><br>
+           <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
+                   <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9><br>
+   </div>
+    <hr>
+    <a href="https://wa.me/" <i class="fa-brands fa-whatsapp fa-bounce"></i><b class="shalu">contact on whatshap</b> </a>
     <hr>
     <div class="container-2"> 
         <div class="row-2">
@@ -129,6 +125,23 @@
     border-radius: 20px;
     text-shadow: 1px 1px 2px darkorange;
         }
+          .border{
+    background-color: forestgreen;
+  }
+  .te{
+    text-align: center;
+    margin-left: 2cm;
+    color: black;
+  }
+  .laptop{
+     margin-left: 1cm;
+    gap: 2cm;
+    display: flex;
+    height: 150px;
+    width: 250px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+  }
         table th td tr.colsetwidth{
             width: 50%;
         }
