--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -17,7 +17,8 @@
     </marquee>
     <hr>
         <div class="border">
-            <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">home</h9><br>
+                             <a href="helo.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go back</h9><br>
+            <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">instructions/contact</h9><br>
            <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
                    <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9><br>
    </div>
@@ -134,7 +135,7 @@
     color: black;
   }
   .laptop{
-     margin-left: 2cm;
+     margin-left: 1cm;
     gap: 2cm;
     display: flex;
     height: 150px;
