--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
   </head>
 <body>
   <marquee class="mar">
-        <h2 <style'font-size:100px;'>&#9749;</style>YOU ARE MOST WELCOME TO VISIT ON MY WEBSITE </h2>
+        <h2 <style'font-size:100px;'>&#9749;</style>home section </h2>
     </marquee>
     <hr>
     <div class="border">
+                 <a href="helo.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">go back</h9><br>
            <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
                    <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9<br>
                     <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9<br>
@@ -167,11 +168,13 @@ and you can write your problems ,then i will suggest you</h4>
     color:black;
   }
   .laptop{
-     margin-left: 2cm;
+        margin-left: 1cm;
     gap: 2cm;
     display: flex;
     height: 150px;
-    width: 350px;
+    width: 250px;
+    padding-top: 1%;
+    padding-bottom: 1%;
    
   }
   .h{
