--- a/helo.html
+++ b/helo.html
@@ -22,8 +22,8 @@
     <div class="box"> 
                     <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">instructions/contact</h9><br>
                <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
-                   <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9<br>
-                    <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9<br>
+                   <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9><br>
+                    <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9><br>
 </div>
 <hr>
 <div class="para">
