--- a/notes.html
+++ b/notes.html
@@ -16,7 +16,8 @@
     <h2 <style'font-size:100px;'>&#9749;</style>RANDOM NOTES SECTION</h2>
 </marquee>
           <div class="border">
-             <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">home</h9><br>
+                              <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">back</h9><br>
+             <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">instructions/contacts</h9><br>
                     <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9><br>
                     <a href="Cquestionpaper.html"><img class="laptop" src="images/colleg.jpg"></a><h9 class="te">college section</h9><br>
   </div>
