--- a/goback.html
+++ b/goback.html
@@ -33,7 +33,8 @@
         color: aquamarine;
     }
      .laptop{
-kn    gap: 2cm;
+        margin-left: 1cm;
+    gap: 2cm;
     display: flex;
     height: 150px;
     width: 250px;
