--- a/goback.html
+++ b/goback.html
@@ -16,6 +16,7 @@
     </marquee>
     <br>
     <div class="border"> 
+                            <a href="goback.html"><img class="laptop" src="images/go back.jpg"></a><h9 class="te">goback</h9><br> 
                      <a href="index.html"><img class="laptop" src="images/home.jpg"></a><h9 class="te">home section</h9><br>
                  <a href="notes.html"><img class="laptop" src="images/random notes.webp"></a><h9 class="te">random notes</h9><br>
                    <a href="Squestionpaper.html"><img  class="laptop" src="images/school.jpg"></a><h9 class="te">school section</h9><br>
