--- a/Cquestionpaper.html
+++ b/Cquestionpaper.html
@@ -99,29 +99,13 @@
     </div>
     <style>
         body{
- background-image: URL("https://1.bp.blogspot.com/-Tww-CVZ62HE/VLk7semqD0I/AAAAAAAAE6A/zYHC2EFMxgc/s1600/Pollution.jpg");
-            background-repeat: no-repeat;
-            background-size: 400% 400%;
-            animation: bg 12s ease-in-out infinite;
-            margin-right: 10px;
-            margin-left: 10px;
-        }  
-        @keyframes bg{
-          0%{
-            background-position: 0% 50%;
-          }
-          50%{
-            background-position: 100% 100%;
-          }
-          100%{
-            background-position: 0% 50%;
-          }
+ background-color: blueviolet;
         }
         .tuy{
         color: brown;
         }
         .row-2{
-            background-color: cadetblue;
+            background-image: URL("images/iStock_000016605904_web-1200x565.webp");
     border-radius: 20px;
     text-shadow: 1px 1px 2px darkorange;
         }
